1.0.6
Added: Config to lose difficulty on death. Set to a negative number if you want to GAIN difficulty on death. Defaults to 0.
Added: Separate config for hearts dropped by passive mobs (defaults to 0.1%, hostile rate is 1%).

1.0.5
Added: Config option for damage scaling on mobs (#20)
Added: Config options for position of difficulty meter. Negative numbers will place it some distance from the right/bottom edge of the screen. (#19)
Added: Config options to add extra heart crystal ore veins based on distance from spawn (#16)
Added: Keybindings to show/hide difficulty meter (#15)

1.0.4-44
Fixed: Heart containers not being consumed when used on 1.10.2.

1.0.4-42
Fixed: Heart containers not functioning on 1.10.2.

1.0.4-41
First XCompat build released
Added: Some special blight death messages for comedic effect.

1.0.3
Added: A config to specify the amount of health lost when a player dies (defaults to 0). The old "Lose Health on Death" config is no longer used.

1.0.2
Added: "Distance and Time" difficulty mode: adds together the "Weighted Average" and "Distance from Spawn" modes. You may need to adjust some other values in the config to make the increases manageable.
Fixed (1.11 only): Textures not loading.

1.0.1
Added: Configs for difficulty meter (under the client category)
Fixed: Difficulty meter displaying at all times... did that for debugging and forgot to remove it.

1.0.0
Added: A config option to disable blight death messages... What, you don't like seeing "Blight Squid drowned" for the 50th time?
Changed: Improved heart rendering a bit
Fixed: A bug where the config file would fail to load if the length of the heart colors list was changed.

0.2.7
Added: Config option to replace blights being on fire with a particle effect (enabled by default). This is more reliable, as it works on fire-proof mobs. Current effect likely needs work...
Added: Additional configs for blights (fire resistance, invisibility, supercharged creepers).